[gd_scene load_steps=7 format=3 uid="uid://cwuevu46j5mmr"]

[ext_resource type="PackedScene" uid="uid://cueqqi8r12cud" path="res://Scene/UserInterface/SubScenes/search_option_button.tscn" id="1_lab0p"]
[ext_resource type="Script" path="res://Scene/UserInterface/pokemon_set_creator.gd" id="1_lh40e"]
[ext_resource type="StyleBox" uid="uid://b1bvdnbgalbwm" path="res://Ressourcen/Styles/menue_style_box_flat.tres" id="2_5s4lw"]
[ext_resource type="StyleBox" uid="uid://cepxar0wi7s6g" path="res://Ressourcen/Styles/menue_hover_style_box_flat.tres" id="3_obsqf"]
[ext_resource type="StyleBox" uid="uid://cafjxm53n17na" path="res://Ressourcen/Styles/menue_pressed_style_box_flat.tres" id="4_btta0"]
[ext_resource type="PackedScene" uid="uid://cxjnym73ccpik" path="res://Scene/UserInterface/SubScenes/ev_spin_box.tscn" id="5_5i5nl"]

[node name="PokemonSetCreator" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_lh40e")

[node name="ColorRect" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 50
theme_override_constants/margin_top = 30
theme_override_constants/margin_right = 50
theme_override_constants/margin_bottom = 30

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
layout_mode = 2

[node name="Top" type="HBoxContainer" parent="MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="MarginContainer/VBoxContainer/Top"]
layout_mode = 2
size_flags_horizontal = 6
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 30
text = "Set Creator"
horizontal_alignment = 1

[node name="Control2" type="Control" parent="MarginContainer/VBoxContainer"]
custom_minimum_size = Vector2(250, 50)
layout_mode = 2

[node name="CoreUI" type="HBoxContainer" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
theme_override_constants/separation = 150

[node name="Left" type="VBoxContainer" parent="MarginContainer/VBoxContainer/CoreUI"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_stretch_ratio = 0.4

[node name="Middle" type="VBoxContainer" parent="MarginContainer/VBoxContainer/CoreUI"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_stretch_ratio = 0.5

[node name="Set Edit" type="VBoxContainer" parent="MarginContainer/VBoxContainer/CoreUI/Middle"]
custom_minimum_size = Vector2(200, 100)
layout_mode = 2
theme_override_constants/separation = 10

[node name="Species" parent="MarginContainer/VBoxContainer/CoreUI/Middle/Set Edit" instance=ExtResource("1_lab0p")]
layout_mode = 2

[node name="Set" type="HBoxContainer" parent="MarginContainer/VBoxContainer/CoreUI/Middle/Set Edit"]
layout_mode = 2

[node name="SetSelect" type="OptionButton" parent="MarginContainer/VBoxContainer/CoreUI/Middle/Set Edit/Set"]
custom_minimum_size = Vector2(100, 31)
layout_mode = 2
size_flags_horizontal = 3
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_colors/font_pressed_color = Color(1, 1, 1, 1)
theme_override_colors/font_hover_color = Color(1, 1, 1, 1)
theme_override_colors/font_hover_pressed_color = Color(0, 0, 0, 1)
theme_override_colors/font_focus_color = Color(0, 0, 0, 1)
theme_override_colors/font_disabled_color = Color(0, 0, 0, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_styles/normal = ExtResource("2_5s4lw")
theme_override_styles/hover = ExtResource("3_obsqf")
theme_override_styles/pressed = ExtResource("4_btta0")
fit_to_longest_item = false

[node name="Tera" type="HBoxContainer" parent="MarginContainer/VBoxContainer/CoreUI/Middle/Set Edit"]
layout_mode = 2

[node name="Label" type="Label" parent="MarginContainer/VBoxContainer/CoreUI/Middle/Set Edit/Tera"]
layout_mode = 2
theme_override_colors/font_color = Color(0, 0, 0, 1)
text = "Tera Type:  "

[node name="TeraSelect" type="OptionButton" parent="MarginContainer/VBoxContainer/CoreUI/Middle/Set Edit/Tera"]
custom_minimum_size = Vector2(80, 0)
layout_mode = 2
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_styles/normal = ExtResource("2_5s4lw")
alignment = 1
item_count = 19
popup/item_0/text = "Bug"
popup/item_0/id = 0
popup/item_1/text = "Dark"
popup/item_1/id = 1
popup/item_2/text = "Dragon"
popup/item_2/id = 2
popup/item_3/text = "Electric"
popup/item_3/id = 3
popup/item_4/text = "Fairy"
popup/item_4/id = 4
popup/item_5/text = "Fighting"
popup/item_5/id = 5
popup/item_6/text = "Fire"
popup/item_6/id = 6
popup/item_7/text = "Flying"
popup/item_7/id = 7
popup/item_8/text = "Ghost"
popup/item_8/id = 8
popup/item_9/text = "Grass"
popup/item_9/id = 9
popup/item_10/text = "Ground"
popup/item_10/id = 10
popup/item_11/text = "Ice"
popup/item_11/id = 11
popup/item_12/text = "Normal"
popup/item_12/id = 12
popup/item_13/text = "Poison"
popup/item_13/id = 13
popup/item_14/text = "Psychic"
popup/item_14/id = 14
popup/item_15/text = "Rock"
popup/item_15/id = 15
popup/item_16/text = "Steel"
popup/item_16/id = 16
popup/item_17/text = "Water"
popup/item_17/id = 17
popup/item_18/text = "Stellar"
popup/item_18/id = 18
metadata/_edit_group_ = true

[node name="Stats" type="GridContainer" parent="MarginContainer/VBoxContainer/CoreUI/Middle/Set Edit"]
layout_mode = 2
columns = 3

[node name="Control" type="Control" parent="MarginContainer/VBoxContainer/CoreUI/Middle/Set Edit/Stats"]
layout_mode = 2

[node name="Label" type="Label" parent="MarginContainer/VBoxContainer/CoreUI/Middle/Set Edit/Stats"]
layout_mode = 2
size_flags_horizontal = 0
theme_override_colors/font_color = Color(0, 0, 0, 1)
text = "IVs"

[node name="Label2" type="Label" parent="MarginContainer/VBoxContainer/CoreUI/Middle/Set Edit/Stats"]
layout_mode = 2
theme_override_colors/font_color = Color(0, 0, 0, 1)
text = "EVs"

[node name="Label3" type="Label" parent="MarginContainer/VBoxContainer/CoreUI/Middle/Set Edit/Stats"]
layout_mode = 2
theme_override_colors/font_color = Color(0, 0, 0, 1)
text = "HP"

[node name="HpIv" type="SpinBox" parent="MarginContainer/VBoxContainer/CoreUI/Middle/Set Edit/Stats"]
layout_mode = 2
max_value = 31.0
value = 31.0
rounded = true
alignment = 1
update_on_text_changed = true

[node name="HpEv" parent="MarginContainer/VBoxContainer/CoreUI/Middle/Set Edit/Stats" instance=ExtResource("5_5i5nl")]
layout_mode = 2

[node name="Label4" type="Label" parent="MarginContainer/VBoxContainer/CoreUI/Middle/Set Edit/Stats"]
layout_mode = 2
theme_override_colors/font_color = Color(0, 0, 0, 1)
text = "ATK"

[node name="AtkIv" type="SpinBox" parent="MarginContainer/VBoxContainer/CoreUI/Middle/Set Edit/Stats"]
layout_mode = 2
max_value = 31.0
value = 31.0
rounded = true
alignment = 1
update_on_text_changed = true

[node name="AtkEv" parent="MarginContainer/VBoxContainer/CoreUI/Middle/Set Edit/Stats" instance=ExtResource("5_5i5nl")]
layout_mode = 2

[node name="Label5" type="Label" parent="MarginContainer/VBoxContainer/CoreUI/Middle/Set Edit/Stats"]
layout_mode = 2
theme_override_colors/font_color = Color(0, 0, 0, 1)
text = "DEF"

[node name="DefIv" type="SpinBox" parent="MarginContainer/VBoxContainer/CoreUI/Middle/Set Edit/Stats"]
layout_mode = 2
max_value = 31.0
value = 31.0
rounded = true
alignment = 1
update_on_text_changed = true

[node name="DefEv" parent="MarginContainer/VBoxContainer/CoreUI/Middle/Set Edit/Stats" instance=ExtResource("5_5i5nl")]
layout_mode = 2

[node name="Label6" type="Label" parent="MarginContainer/VBoxContainer/CoreUI/Middle/Set Edit/Stats"]
layout_mode = 2
theme_override_colors/font_color = Color(0, 0, 0, 1)
text = "SPA"

[node name="SpaIv" type="SpinBox" parent="MarginContainer/VBoxContainer/CoreUI/Middle/Set Edit/Stats"]
layout_mode = 2
max_value = 31.0
value = 31.0
rounded = true
alignment = 1
update_on_text_changed = true

[node name="SpaEv" parent="MarginContainer/VBoxContainer/CoreUI/Middle/Set Edit/Stats" instance=ExtResource("5_5i5nl")]
layout_mode = 2

[node name="Label7" type="Label" parent="MarginContainer/VBoxContainer/CoreUI/Middle/Set Edit/Stats"]
layout_mode = 2
theme_override_colors/font_color = Color(0, 0, 0, 1)
text = "SPD"

[node name="SpdIv" type="SpinBox" parent="MarginContainer/VBoxContainer/CoreUI/Middle/Set Edit/Stats"]
layout_mode = 2
max_value = 31.0
value = 31.0
rounded = true
alignment = 1
update_on_text_changed = true

[node name="SpdEv" parent="MarginContainer/VBoxContainer/CoreUI/Middle/Set Edit/Stats" instance=ExtResource("5_5i5nl")]
layout_mode = 2

[node name="Label8" type="Label" parent="MarginContainer/VBoxContainer/CoreUI/Middle/Set Edit/Stats"]
layout_mode = 2
theme_override_colors/font_color = Color(0, 0, 0, 1)
text = "SPE"

[node name="SpeIv" type="SpinBox" parent="MarginContainer/VBoxContainer/CoreUI/Middle/Set Edit/Stats"]
layout_mode = 2
max_value = 31.0
value = 31.0
rounded = true
alignment = 1
update_on_text_changed = true

[node name="SpeEv" parent="MarginContainer/VBoxContainer/CoreUI/Middle/Set Edit/Stats" instance=ExtResource("5_5i5nl")]
layout_mode = 2

[node name="NatureSelector" type="HBoxContainer" parent="MarginContainer/VBoxContainer/CoreUI/Middle/Set Edit"]
layout_mode = 2

[node name="Label" type="Label" parent="MarginContainer/VBoxContainer/CoreUI/Middle/Set Edit/NatureSelector"]
layout_mode = 2
theme_override_colors/font_color = Color(0, 0, 0, 1)
text = "Nature"

[node name="NatureIncrease" type="OptionButton" parent="MarginContainer/VBoxContainer/CoreUI/Middle/Set Edit/NatureSelector"]
layout_mode = 2
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_styles/normal = ExtResource("2_5s4lw")
item_count = 5
selected = 0
popup/item_0/text = "+ ATK"
popup/item_0/id = 0
popup/item_1/text = "+ DEF"
popup/item_1/id = 1
popup/item_2/text = "+ SPA"
popup/item_2/id = 2
popup/item_3/text = "+ SPD"
popup/item_3/id = 3
popup/item_4/text = "+ SPE"
popup/item_4/id = 4

[node name="NatureDecrease" type="OptionButton" parent="MarginContainer/VBoxContainer/CoreUI/Middle/Set Edit/NatureSelector"]
layout_mode = 2
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_styles/normal = ExtResource("2_5s4lw")
item_count = 5
selected = 2
popup/item_0/text = "- ATK"
popup/item_0/id = 0
popup/item_1/text = "- DEF"
popup/item_1/id = 1
popup/item_2/text = "- SPA"
popup/item_2/id = 2
popup/item_3/text = "- SPD"
popup/item_3/id = 3
popup/item_4/text = "- SPE"
popup/item_4/id = 4

[node name="Control" type="Control" parent="MarginContainer/VBoxContainer/CoreUI/Middle/Set Edit/NatureSelector"]
layout_mode = 2
size_flags_horizontal = 3

[node name="Label2" type="Label" parent="MarginContainer/VBoxContainer/CoreUI/Middle/Set Edit/NatureSelector"]
layout_mode = 2
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 12
text = "Remaining EVs:"
horizontal_alignment = 2

[node name="EVCountLabel" type="Label" parent="MarginContainer/VBoxContainer/CoreUI/Middle/Set Edit/NatureSelector"]
layout_mode = 2
theme_override_colors/font_color = Color(0, 0, 0, 1)
text = "508"
horizontal_alignment = 2

[node name="AbilitySelector" type="HBoxContainer" parent="MarginContainer/VBoxContainer/CoreUI/Middle/Set Edit"]
layout_mode = 2

[node name="Label" type="Label" parent="MarginContainer/VBoxContainer/CoreUI/Middle/Set Edit/AbilitySelector"]
layout_mode = 2
theme_override_colors/font_color = Color(0, 0, 0, 1)
text = "Ability: "

[node name="AbilityOption" type="OptionButton" parent="MarginContainer/VBoxContainer/CoreUI/Middle/Set Edit/AbilitySelector"]
custom_minimum_size = Vector2(0, 30)
layout_mode = 2
size_flags_horizontal = 3
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_styles/normal = ExtResource("2_5s4lw")

[node name="ItemSelector" type="HBoxContainer" parent="MarginContainer/VBoxContainer/CoreUI/Middle/Set Edit"]
layout_mode = 2

[node name="Label2" type="Label" parent="MarginContainer/VBoxContainer/CoreUI/Middle/Set Edit/ItemSelector"]
layout_mode = 2
theme_override_colors/font_color = Color(0, 0, 0, 1)
text = "Item: "

[node name="Item" parent="MarginContainer/VBoxContainer/CoreUI/Middle/Set Edit/ItemSelector" instance=ExtResource("1_lab0p")]
layout_mode = 2

[node name="Moves" type="VBoxContainer" parent="MarginContainer/VBoxContainer/CoreUI/Middle/Set Edit"]
layout_mode = 2

[node name="Label" type="Label" parent="MarginContainer/VBoxContainer/CoreUI/Middle/Set Edit/Moves"]
layout_mode = 2
theme_override_colors/font_color = Color(0, 0, 0, 1)
text = "Moves"

[node name="Move1" parent="MarginContainer/VBoxContainer/CoreUI/Middle/Set Edit/Moves" instance=ExtResource("1_lab0p")]
layout_mode = 2

[node name="Move2" parent="MarginContainer/VBoxContainer/CoreUI/Middle/Set Edit/Moves" instance=ExtResource("1_lab0p")]
layout_mode = 2

[node name="Move3" parent="MarginContainer/VBoxContainer/CoreUI/Middle/Set Edit/Moves" instance=ExtResource("1_lab0p")]
layout_mode = 2

[node name="Move4" parent="MarginContainer/VBoxContainer/CoreUI/Middle/Set Edit/Moves" instance=ExtResource("1_lab0p")]
layout_mode = 2

[node name="Right" type="VBoxContainer" parent="MarginContainer/VBoxContainer/CoreUI"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_stretch_ratio = 0.35

[node name="Bottom" type="HBoxContainer" parent="MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="Back" type="Button" parent="MarginContainer/VBoxContainer/Bottom"]
custom_minimum_size = Vector2(150, 60)
layout_mode = 2
size_flags_vertical = 8
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_colors/font_pressed_color = Color(1, 1, 1, 1)
theme_override_colors/font_hover_color = Color(1, 1, 1, 1)
theme_override_font_sizes/font_size = 24
theme_override_styles/normal = ExtResource("2_5s4lw")
theme_override_styles/hover = ExtResource("3_obsqf")
theme_override_styles/pressed = ExtResource("4_btta0")
text = "Go Back"

[node name="Control" type="Control" parent="MarginContainer/VBoxContainer/Bottom"]
layout_mode = 2
size_flags_horizontal = 3

[node name="Save" type="Button" parent="MarginContainer/VBoxContainer/Bottom"]
custom_minimum_size = Vector2(150, 60)
layout_mode = 2
size_flags_vertical = 8
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_colors/font_pressed_color = Color(1, 1, 1, 1)
theme_override_colors/font_hover_color = Color(1, 1, 1, 1)
theme_override_font_sizes/font_size = 24
theme_override_styles/normal = ExtResource("2_5s4lw")
theme_override_styles/hover = ExtResource("3_obsqf")
theme_override_styles/pressed = ExtResource("4_btta0")
text = "Save Set"

[node name="PopupPanel" type="PopupPanel" parent="."]
initial_position = 1
size = Vector2i(300, 132)

[node name="VBoxContainer" type="VBoxContainer" parent="PopupPanel"]
offset_left = 4.0
offset_top = 4.0
offset_right = 296.0
offset_bottom = 128.0
theme_override_constants/separation = 10

[node name="Control" type="Control" parent="PopupPanel/VBoxContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="PopupPanel/VBoxContainer"]
layout_mode = 2
text = "Save Pokemon Set"
horizontal_alignment = 1

[node name="TextEdit" type="TextEdit" parent="PopupPanel/VBoxContainer"]
custom_minimum_size = Vector2(200, 30)
layout_mode = 2
size_flags_horizontal = 4

[node name="HBoxContainer" type="HBoxContainer" parent="PopupPanel/VBoxContainer"]
layout_mode = 2

[node name="Cancel" type="Button" parent="PopupPanel/VBoxContainer/HBoxContainer"]
layout_mode = 2
text = "Cancel"

[node name="Control" type="Control" parent="PopupPanel/VBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="Confirm" type="Button" parent="PopupPanel/VBoxContainer/HBoxContainer"]
layout_mode = 2
text = "Confirm"

[node name="Control2" type="Control" parent="PopupPanel/VBoxContainer"]
layout_mode = 2

[connection signal="item_selected" from="MarginContainer/VBoxContainer/CoreUI/Middle/Set Edit/Species" to="." method="_on_species_item_selected"]
[connection signal="item_selected" from="MarginContainer/VBoxContainer/CoreUI/Middle/Set Edit/Set/SetSelect" to="." method="_on_set_select_item_selected"]
[connection signal="gui_input" from="MarginContainer/VBoxContainer/CoreUI/Middle/Set Edit/Stats" to="." method="_on_stats_gui_input"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/Bottom/Back" to="." method="_on_back_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/Bottom/Save" to="." method="_on_save_pressed"]
[connection signal="pressed" from="PopupPanel/VBoxContainer/HBoxContainer/Cancel" to="." method="_on_cancel_pressed"]
[connection signal="pressed" from="PopupPanel/VBoxContainer/HBoxContainer/Confirm" to="." method="_on_confirm_pressed"]
